# court_parser

./: LICENSE  README.md  attr_parser.py  attr_parser_selenium.py  db.py  main.py  pyproject.toml  requirements.txt  run_docker_image.sh  schema.sql  telegram_bot.py  test.py  test_docker.py
